# ohtupalautukset

./: Muokkaus 3.txt  README.md
viikko2/nhl-reader/src/: index.py  player.py  suomalaisetPelaajat.py  suomalaiset_pelaajat.py
viikko2/poetry-web/: pyproject.toml
viikko3/hello-robot/: log.html  output.xml  report.html
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage  pyproject.toml
viikko4/verkkokauppa/src/: ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
